2013-09-12  Julien Bect  <julien.bect@supelec.fr>

	stk_param_estim.m: Fix a stupid bug.

	* paramestim/stk_param_estim.m: modified

	Reorganize folders.

	* utils/arrays: new folder
	* utils/arrays/generic: new folder
	* utils/@stk_dataframe: moved to utils/arrays
	* utils/@stk_factorialdesign: moved to utils/arrays
	* utils/@struct: moved to utils/arrays
	* misc/text/stk_sprintf_data.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_rownames.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_info.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_sizetype.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_colnames.m: moved to utils/arrays/generic
	* utils/stk_rescale.m: moved to utils/arrays/generic
	* utils/stk_normalize.m: moved to utils/arrays/generic
	* misc/config/stk_path.m: modified
	* misc/config/stk_compile_all.m: modified

	Fill .info field after the construction of a dataframe.

	* core/stk_predict.m: modified
	* core/@stk_kriging_equation/stk_predict.m: modified
	* utils/stk_feval.m: modified
	* sampling/stk_sampling_olhs.m: modified
	* sampling/stk_sampling_randunif.m: modified
	* sampling/stk_sampling_maximinlhs.m: modified
	* sampling/stk_sampling_halton_rr2.m: modified
	* sampling/stk_sampling_randomlhs.m: modified

2013-09-11  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe, @stk_factorialdesign: Improve display.

	* utils/@stk_dataframe/stk_sprintf_info.m: new function
	* utils/@stk_dataframe/stk_sprintf_data.m: new function
	* utils/@stk_dataframe/disp.m: modified
	* utils/@stk_dataframe/stk_sprintf_colnames.m: new function
	* utils/@stk_dataframe/stk_dataframe.m: modified
	* utils/@stk_dataframe/stk_sprintf_rownames.m: new function
	* utils/@stk_dataframe/stk_sprintf_sizetype.m: new function
	* utils/@stk_factorialdesign/disp.m: new function
	* utils/@stk_factorialdesign/stk_factorialdesign.m: modified
	* utils/@stk_factorialdesign/stk_sprintf_levels.m: new function